<resources>
    <string name="app_name" translatable="false">BoT</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="fake_content">Shuttle UPCOMING Shuttle buses replace
Braintree Branch service between North Quincy
and JFK/UMass from 8:45 PM to end of service
on Apr 3 - 6 for track tie replacement work.

Affected stops:
•JFK/UMass •North Quincy

Updated: 3/30/2023 4:30 AM</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="logout">Logout</string>
    <string name="login">Login</string>

    <string name="all_events">All Events</string>
    <string name="view_profile">View Profile</string>
    <string name="Nan_username">NaN</string>
    <string name="maps_api" translatable="false">AIzaSyAmjj4km9mc04VEvtj3mqVEYH6L7kc2vks</string>
    <string-array name="repeating">
        <item>Weekly</item>
        <item>Bi-Weekly</item>
        <item>Monthly</item>
        <item>Daily</item>
        <item>Not a repeating event</item>
    </string-array>
</resources>