<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Menu">


    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="1dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="#1B362C"
        android:gravity="center_horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:gravity="start">
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="114dp"
                android:layout_height="114dp"
                android:background="@drawable/bigger_circle"
                android:id="@+id/menu_profile"
                >

                <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:backgroundTint="@color/yellow"
                    app:cardCornerRadius="60dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <ImageView
                        android:id="@+id/imageView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:src="@drawable/profile" />

                </android.support.v7.widget.CardView>
            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/Nan_username"
                android:id = "@+id/menu_username"
                android:textColor="#ffffff"
                android:gravity="center"
                android:textSize="30sp"
                android:layout_marginStart="5dp"
                android:maxWidth="130dp"
                />

        </LinearLayout>

        <View
            android:layout_width="280dp"
            android:layout_height="2dp"
            android:background="#ffffff"
            android:layout_marginTop="30dp"
            android:layout_marginStart="0dp"/>

        <LinearLayout
            android:id="@+id/profile_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:padding="40dp">

            <ImageView
                android:id="@+id/profile_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/customer"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/view_profile"
                android:textColor="#ffffff"
                android:textSize="20sp"
                android:layout_marginStart="20dp"
                android:gravity="center"
                />

            <ImageView
                android:id="@+id/warning_image"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/warning"
                android:layout_marginLeft="15dp"/>



        </LinearLayout>

        <LinearLayout
            android:id="@+id/events_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:padding="40dp">

            <ImageView
                android:id="@+id/events_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/accepted"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/all_events"
                android:textColor="#ffffff"
                android:textSize="20dp"
                android:layout_marginLeft="20dp"
                android:gravity="center"
                />


        </LinearLayout>

        <LinearLayout
            android:id="@+id/add_event_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:padding="40dp">

            <ImageView
                android:id="@+id/add_event_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/schedule"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/home"
                android:textColor="#ffffff"
                android:textSize="20sp"
                android:layout_marginStart="20dp"
                android:gravity="center"
                />


        </LinearLayout>

        <LinearLayout
            android:id="@+id/logout_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:padding="40dp">

            <ImageView
                android:id="@+id/logout_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/logout"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/login"
                android:textColor="#ffffff"
                android:id="@+id/logout"
                android:textSize="20sp"
                android:layout_marginStart="20dp"
                android:gravity="center"
                />


        </LinearLayout>
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>